# cse587Autils

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-package.yml
cse587Autils/: __init__.py  configure_logging.py
cse587Autils/DiceObjects/: BagOfDice.py  Die.py  __init__.py  test.py  test_BagOfDice.py  test_Die.py
cse587Autils/HMMObjects/: HMM.py  test_HMM.py
cse587Autils/SequenceObjects/: SequenceModel.py  SiteModel.py  __init__.py  test_SequenceModel.py  test_SiteModel.py
cse587Autils/utils/: __init__.py  check_probability.py  flatten_2d_list.py  test_check_probabilities.py  type_prob_table.py
doc_src/: conf.py
doc_src/DiceObjects/API/: Die.rst
doc_src/DiceObjects/Usage/: Die.ipynb
doc_src/SequenceObjects/: index.rst
doc_src/SequenceObjects/API/: SiteModel.rst  index.rst
doc_src/SequenceObjects/Usage/: SiteModel.ipynb  index.rst
doc_src/utils/: check_probability.rst  euclidean_distance_lists.rst  flatten_2d_list.rst  index.rst
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/DiceObjects/: index.doctree
docs/DiceObjects/: index.html
docs/DiceObjects/API/: Die.html  (+2 more)
docs/SequenceObjects/: index.html
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js
docs/source/: conf.py  index.rst
docs/utils/: check_probability.html  euclidean_distance_lists.html  flatten_2d_list.html  index.html
(+48 files in other folders)
