[tool.poetry]
name = "cse587Autils"
version = "0.1.0"
description = "A set of classes and functions to be used in"
authors = ["chase mateusiak <chase.mateusiak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.1.1"
nbsphinx = "^0.9.2"
ipykernel = "^6.25.0"
autopep8 = "^2.0.2"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
